<resources>
    <string name="app_name">TransVale</string>
    <string name="sobre">Sobre</string>
    <string name="sobre_resourse">Sobre</string>
    <string name="t_t_t_t_t_tbem_vindo">\t\t\t\t\t\tBem Vindo</string>
    <string name="Sobree">Sobre</string>
    <string name="todo_r">TODO</string>
    <string name="rotas_r">Rotas</string>
    <string name="fundada_em_17_de_julho_de_1963_pelos_s_cios_marcio_fossa_j_nior_e_vitor_felipe_ramos_mello_os_dois_primeiros_como_motoristas_e_maria_edite_na_administra_o_a_via_o_transvale_uma_empresa_de_transporte_coletivo_intermunicipal_que_cresceu_vertiginosamente_ao_longo_desses_60_anos">Fundada em 17 de julho de 1963 pelos sócios Marcio Fossa Júnior e Vitor Felipe Ramos Mello – os dois primeiros como motoristas e Maria Edite na administração, a Viação TransVale é uma empresa de transporte coletivo intermunicipal que cresceu vertiginosamente ao longo desses 60 anos.</string>
    <string name="a_via_o_transvale_investe_tamb_m_nos_seus_funcion_rios_com_pr_mios_e_pol_ticas_de_valoriza_o_de_seus_profissionais_deixando_ainda_espa_o_aberto_para_que_todos_os_colaboradores_opinem_tenham_ideias_e_as_apresentem_para_a_dire_o_isto_claro_resulta_em_satisfa_o_dos_seus_funcion_rios">A Viação TransVale investe também nos seus funcionários, com prêmios e políticas de valorização de seus profissionais, deixando ainda, espaço aberto para que todos os colaboradores opinem, tenham ideias e as apresentem para a direção. Isto, claro, resulta em satisfação dos seus funcionários.</string>
    <string name="al_m_da_preocupa_o_com_seus_clientes_e_funcion_rios_a_inova_o_e_consci_ncia_social_tamb_m_fazem_parte_da_nossa_hist_ria_a_via_o_transvale_foi_a_primeira_empresa_de_transporte_coletivo_intermunicipal_a_oferecer_aos_clientes_nibus_com_elevador_hidr_ulico_plataforma_espec_fica_para_deficientes_f_sicos_que_utilizam_cadeiras_de_roda_para_se_locomover_demonstrando_assim_uma_preocupa_o_com_o_aspecto_social">Além da preocupação com seus clientes e funcionários, a inovação e consciência social também fazem parte da nossa história. A Viação TransVale foi a primeira empresa de transporte coletivo intermunicipal a oferecer aos clientes ônibus com elevador hidráulico, plataforma específica para deficientes físicos que utilizam cadeiras de roda para se locomover, demonstrando assim uma preocupação com o aspecto social.</string>
    <string name="itaja_porto_belo">Itajaí - Porto Belo</string>
    <string name="cambori_itapema">Camboriú - Itapema</string>
    <string name="porto_belo_cambori">Porto Belo - Camboriú</string>
    <string name="r_5_00">R$5,00</string>
    <string name="r_5_01">R$5,00</string>
    <string name="r_5_02">R$5,00</string>
    <string name="bem_vindo_viajante">BEM VINDO VIAJANTE</string>
</resources>